--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,11 @@ pyOpenSSL
 Flask-Cors==4.0.0
 
 # flask_mysqldb
+
+opencv-python~=4.8.0.76
+numpy~=1.24.3
+requests~=2.31.0
+pillow~=9.4.0
+scikit-image~=0.19.3
+sklearn~=0.0.post9
+pandas~=2.0.3
